Update UpdateChecker.java